--- a/DroseroMVC/Views/Home/About.cshtml
+++ b/DroseroMVC/Views/Home/About.cshtml
@@ -4,4 +4,14 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p style="text-align:justify">Drosero Cafe & Restro is cafe cum lounge by Ghaus Enterprise. Our story begin when my thirst for
+    very peppy Italian cuisine with fine aromatic Mediterranean herbs as Rosemary, Basil, Thyme and
+    Presley. Another cuisine that made my mouth water was during my stay in Gulf countries, their food
+    introduce me to heavily Mediterranean taste, the juicy kebabs and healthy hummus breakfast. The earthy
+    smell of freshly ground coffee beans, the real Espresso shots and mind blowing Americano was raising my
+    thirst higher for something different. Another of my passion in thoughtful and never ending reading was
+    missing in our neighbourhood. So here we present to you authentic handmade food and drinks in the in rustic
+    and calming ambience in Drosero Cafe & Restro.</p>
+
+
+
