--- a/DroseroMVC/Views/Magazine/Index.cshtml
+++ b/DroseroMVC/Views/Magazine/Index.cshtml
@@ -6,24 +6,22 @@
 
 <div>
     <div class="row topcorner dropdown">
-        <input type="button" id="cart" value="Cart" onclick="magazineUI.onloadCartItems" />
-        <div id="addToCart" class="dropdown-content">
-            @{ Html.RenderPartial(@"~\Views\Magazine\_AddToCart.cshtml", Model.CartItemsViewModel); }
+        @*<input type="button" id="cart" value="Cart" onclick="magazineUI.onloadCartItems" />
+    <div id="addToCart" class="dropdown-content">
+        @{ Html.RenderPartial(@"~\Views\Magazine\_AddToCart.cshtml", Model.CartItemsViewModel); }
+    </div>*@        
+    </div>
+    <div class="panel-body">
+        <div>
+            @{ Html.RenderPartial(@"~\Views\Magazine\_Categories.cshtml", Model.CategoryViewModel); }
         </div>
-        
-    </div>
-    
-    <div class="row">
-        @{ Html.RenderPartial(@"~\Views\Magazine\_Categories.cshtml", Model.CategoryViewModel); }
-    </div>
-    <hr/>
-    <div class="row">
-        <span data-bind="text:PageTitle" />
-    </div>
-    <hr/>
-    <div class="row">
-        <div id="foodByCategory" class="row">
-
+        <hr />
+        <div class="row" style="margin-left:8px; font-weight:bold;font-size:medium">
+            <span data-bind="text:PageTitle" />
+        </div>
+        <hr />
+        <div>
+            <div id="foodByCategory" class="row"/>
         </div>
     </div>
 </div>
