--- a/DroseroMVC/Content/bootstrap.css
+++ b/DroseroMVC/Content/bootstrap.css
@@ -757,10 +757,11 @@ pre code {
 }
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+   
 }
 
 .container:before,
@@ -1819,13 +1820,20 @@ fieldset[disabled] .checkbox-inline {
 }
 
 .input-sm {
-  height: 30px;
+  height: 25px;
   padding: 5px 10px;
   font-size: 12px;
   line-height: 1.5;
   border-radius: 3px;
 }
 
+dateTime {
+    height: 25px;
+}
+
+counter {
+    height: 25px;
+}
 select.input-sm {
   height: 30px;
   line-height: 30px;
@@ -6882,3 +6890,59 @@ td.visible-print {
     display: none;
 }
 
+
+
+#container {
+    padding-left: 200px; /* LC width */
+    padding-right: 150px; /* RC width */
+    background-image:none;
+}
+
+    #container .column {
+        position: relative;
+        float: left;
+    }
+
+#center {
+    width: 100%;
+}
+
+#left {
+    width: 200px; /* LC width */
+    right: 200px; /* LC width */
+    margin-left: -100%;
+}
+
+#right {
+    width: 150px; /* RC width */
+    margin-right: -150px; /* RC width */
+}
+
+#footer {
+    clear: both;
+}
+
+.foodItemRow {
+    border-bottom: thin;
+    border-bottom-color: #454545;
+    border-bottom-style: solid;
+    padding:5px;
+}
+
+.foodItemName {
+    font-size: 12px;
+}
+
+
+.foodItemDescription{
+    font-size:10px;
+    color: #909090;
+}
+
+.foodItemPrice{
+    direction:rtl;
+}
+
+.categoryTable {
+    width: 100%
+}
