--- a/DroseroMVC/Views/Account/Login.cshtml
+++ b/DroseroMVC/Views/Account/Login.cshtml
@@ -15,9 +15,9 @@
             {
                 @Html.AntiForgeryToken()
 
-                @*<div class="g-signin2" data-onsuccess="onSignIn"></div>*@
+                <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-                @*<h4>Use a local account to log in.</h4>
+                <h4>Use a local account to log in.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -49,7 +49,7 @@
                 </div>
                 <p>
                     @Html.ActionLink("Register as a new user", "Register")
-                </p>*@
+                </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
                     <p>
                         @Html.ActionLink("Forgot your password?", "ForgotPassword")
@@ -57,11 +57,11 @@
             }
         </section>
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
