--- a/DroseroMVC/Views/Home/Index.cshtml
+++ b/DroseroMVC/Views/Home/Index.cshtml
@@ -2,10 +2,10 @@
     ViewBag.Title = "Home Page";
 }
 
-<div>
+@*<div>
     <h1>Drosero Restro & Cafe</h1>
     <p class="lead">Aphrodisiac of Coffee and Love</p>
-</div>
+</div>*@
 
 <div class="row">
     <div class="col-md-8">
@@ -25,7 +25,7 @@
     <div class="col-lg-3">
         <br /><br />
         <div class="row">
-            <marquee behavior="scroll" direction="up" style="height:250px;">
+            <marquee behavior="scroll" direction="up" style="height:250px" scrollamount="2" >
                 <span>
                     Indulge in our Mediterranean cuisine with exotic kebabs and 
                     <br/>aroma of zartar to pamper your royal nerves.
@@ -50,7 +50,7 @@
     <div class="col-lg-5">
         <br/><br />
         <div class="row">
-            <marquee behavior="scroll" direction="up" style="height:250px;">
+            <marquee behavior="scroll" direction="up" style="height:250px;"  scrollamount="2">
                 <span>
                     Come and enjoy the wide gamite of functions we offer like
                 </span>
