--- a/DroseroMVC/Views/Shared/_Layout.cshtml
+++ b/DroseroMVC/Views/Shared/_Layout.cshtml
@@ -18,22 +18,32 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Drosero", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Drosero Restro & Cafe", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("About Us", "About", "Home")</li>
+                @*<div>
+                    <h1>Drosero Restro & Cafe</h1>
+                    <p class="lead">Aphrodisiac of Coffee and Love</p>
+                </div>
+                <hr />*@
+                <ul class="nav navbar-nav" style="border-bottom-color:white;">                    
                     <li>@Html.ActionLink("Menu", "Index", "Magazine")</li>
+                    <li>@Html.ActionLink("About Us", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
+    <div class="container body-content" >
+        
+        <div style="width:80%;background-color:black;color:white;padding:5px;">
+            @RenderBody()
+            
+        </div>
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <footer style="background-color:black; color:white">
+            <p>&copy; @DateTime.Now.Year - Drosero Cafe & Restro - Ghaus Enterprise</p>
         </footer>
     </div>
 
