--- a/DroseroMVC/Views/Shared/_Layout.cshtml
+++ b/DroseroMVC/Views/Shared/_Layout.cshtml
@@ -37,9 +37,8 @@
     </div>
     <div class="container body-content" >
         
-        <div style="width:80%;background-color:black;color:white;padding:5px;">
-            @RenderBody()
-            
+        <div style="background-color:black;color:white;">
+            @RenderBody()            
         </div>
         <hr />
         <footer style="background-color:black; color:white">
