--- a/DroseroMVC/Views/Magazine/Index.cshtml
+++ b/DroseroMVC/Views/Magazine/Index.cshtml
@@ -5,29 +5,29 @@
 }
 
 <div>
-    <div class="row topcorner dropdown">
-        @*<input type="button" id="cart" value="Cart" onclick="magazineUI.onloadCartItems" />
-            <div id="addToCart" class="dropdown-content">
-                @{ Html.RenderPartial(@"~\Views\Magazine\_AddToCart.cshtml", Model.CartItemsViewModel); }
-            </div>*@
-    </div>
+    @*<div class="row topcorner dropdown">
+            <input type="button" id="cart" value="Cart" onclick="magazineUI.onloadCartItems" />
+                <div id="addToCart" class="dropdown-content">
+                    @{ Html.RenderPartial(@"~\Views\Magazine\_AddToCart.cshtml", Model.CartItemsViewModel); }
+                </div>
+        </div>*@
 
-    <div class="panel-body">
+    <div>
         <div class="panel-info">
             <div>@Model.ErrorMessage</div>
         </div>
-       
-        @if (Model.CategoryViewModel.Categories != null && Model.CategoryViewModel.Categories.Count > 0)
-        {
-            { Html.RenderPartial(@"~\Views\Magazine\_Categories.cshtml", Model.CategoryViewModel); }
-        }
-        <hr />
-        <div class="row" style="margin-left:8px; font-weight:bold;font-size:medium">
-            <span data-bind="text:PageTitle" />
+        <div style="position:fixed; top:50px;background-color:#101010; min-height:50px;z-index:1020;">
+            @if (Model.CategoryViewModel.Categories != null && Model.CategoryViewModel.Categories.Count > 0)
+            {
+                { Html.RenderPartial(@"~\Views\Magazine\_Categories.cshtml", Model.CategoryViewModel); }
+            }
+            
+            <div class="row" style="margin-left:8px; font-weight:bold;font-size:medium;width:80%">
+                <span data-bind="text:PageTitle" />
+            </div>
         </div>
-        <hr />
         <div>
-            <div id="foodByCategory" class="row" />
+            <div id="foodByCategory" class="row"  />
         </div>
     </div>
 </div>
