--- a/DroseroMVC/Views/Magazine/_FoodByCategory.cshtml
+++ b/DroseroMVC/Views/Magazine/_FoodByCategory.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Newtonsoft.Json
 @model DroseroMVC.ViewModels.FoodItemViewModel
     
-<table class="categoryTable">
+<table class="categoryTable" style="margin-top:150px; margin-left:20px; ">
     @foreach (var food in Model.FoodItems)
     {
         <tr>
