--- a/DroseroMVC/Content/Site.css
+++ b/DroseroMVC/Content/Site.css
@@ -8,7 +8,6 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-    
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -1808,16 +1807,16 @@ a {
     width: auto;
 }
 
-.categoryButton:hover {
-    background-color: #e7e7e7;
-    color: black;
-}
+    .categoryButton:hover {
+        background-color: #e7e7e7;
+        color: black;
+    }
 
 .navBarCategory {
     padding: 0px;
     text-align: left;
-    margin:2px;
-    list-style:none;
+    margin: 2px;
+    list-style: none;
 }
 
 .zeroPadding {
@@ -1826,4 +1825,15 @@ a {
 
 .displayInline {
     display: inline;
+}
+
+.triviaDesc {
+    font-size: small;
+    font-family: cursive;
+}
+
+.triviaTitle {
+    font-size: large;
+    font-weight: bold;
+    font-family: cursive;
 }
