--- a/DroseroMVC/Views/Home/Index.cshtml
+++ b/DroseroMVC/Views/Home/Index.cshtml
@@ -41,10 +41,11 @@
     <div class="col-md-5">
         <span>Our Lounge</span>
         <div class="w3-content w3-section" style="max-width: 800px">
-            <img class="homeLoungeSlides" src="~/Content/images/imgLounge1.jpg" style="width: 100%" />
-            <img class="homeLoungeSlides" src="~/Content/images/imgLounge2.jpg" style="width: 100%" />
-            <img class="homeLoungeSlides" src="~/Content/images/imgLounge3.jpg" style="width: 100%" />
-            <img class="homeLoungeSlides" src="~/Content/images/imgLounge4.jpg" style="width: 100%" />
+            <img class="homeLoungeSlides" src="~/Content/images/imgLounge1.png" style="width: 100%" />
+            <img class="homeLoungeSlides" src="~/Content/images/imgLounge2.png" style="width: 100%" />
+            <img class="homeLoungeSlides" src="~/Content/images/imgLounge3.png" style="width: 100%" />
+            <img class="homeLoungeSlides" src="~/Content/images/imgLounge4.png" style="width: 100%" />
+            <img class="homeLoungeSlides" src="~/Content/images/imgLounge5.png" style="width: 100%" />
         </div>
     </div>
     <div class="col-lg-5">
