--- a/DroseroMVC/Content/Site.css
+++ b/DroseroMVC/Content/Site.css
@@ -1837,3 +1837,13 @@ a {
     font-weight: bold;
     font-family: cursive;
 }
+
+.siteBackForeground {
+    background-color: black;
+    color: white;
+}
+
+.padding-left-right-10 {
+    padding-left: 10px;
+    padding-right: 10px;
+}
