--- a/DroseroMVC/Views/Magazine/Index.cshtml
+++ b/DroseroMVC/Views/Magazine/Index.cshtml
@@ -23,7 +23,7 @@
             }
             
             <div class="row" style="margin-left:8px; font-weight:bold;font-size:medium;width:80%">
-                <span data-bind="text:PageTitle" />
+                <h1><span data-bind="text:PageTitle" /></h1>
             </div>
         </div>
         <div>
