--- a/DroseroMVC/Views/Shared/_Layout.cshtml
+++ b/DroseroMVC/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -44,6 +45,7 @@
         <hr />
         <footer style="background-color:black; color:white">
             <p>&copy; @DateTime.Now.Year - Drosero Cafe & Restro - Ghaus Enterprise</p>
+            @*<p>Total Number of visitors: @ApplicationInstance.Application["TotalHit"]</p>*@
         </footer>
     </div>
 
