--- a/DroseroMVC/Views/Trivia/Index.cshtml
+++ b/DroseroMVC/Views/Trivia/Index.cshtml
@@ -5,7 +5,7 @@
 }
 <div>
     <div class="panel-heading">
-        <div>Trivia</div>
+        <div><h1>Trivia</h1></div>
     </div>
     <div class="panel-body">
         <ul>
