--- a/DroseroMVC/Views/Home/Index.cshtml
+++ b/DroseroMVC/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <span>Our Indulgences</span>
+        <h1><span>Our Indulgences</span></h1>
         <div class="w3-content w3-section" style="max-width: 800px">
             <img class="homeFoodSlides" src="~/Content/images/imgCategoryBev1.jpg" style="width: 100%"/>
             <img class="homeFoodSlides" src="~/Content/images/imgCategoryBev2.jpg" style="width: 100%"/>
@@ -20,6 +20,8 @@
             <img class="homeFoodSlides" src="~/Content/images/imgCategoryMainCourse2.jpg" style="width: 100%"/>
             <img class="homeFoodSlides" src="~/Content/images/imgCategoryMainCourse3.jpg" style="width: 100%"/>
             <img class="homeFoodSlides" src="~/Content/images/imgCategoryMainCourse4.jpg" style="width: 100%"/>
+            <img class="homeFoodSlides" src="~/Content/images/imgCategorySandwich1.jpg" style="width: 100%" />
+            <img class="homeFoodSlides" src="~/Content/images/imgCategorySandwich2.jpg" style="width: 100%" />
         </div>
     </div>
     <div class="col-lg-3">
@@ -39,15 +41,17 @@
 <hr/>
 <div class="row">
     <div class="col-md-5">
-        <span>Our Lounge</span>
-        <div class="w3-content w3-section" style="max-width: 800px">
-            <img class="homeLoungeSlides" src="~/Content/images/imgLounge1.png" style="width: 100%" />
-            <img class="homeLoungeSlides" src="~/Content/images/imgLounge2.png" style="width: 100%" />
-            <img class="homeLoungeSlides" src="~/Content/images/imgLounge3.png" style="width: 100%" />
-            <img class="homeLoungeSlides" src="~/Content/images/imgLounge4.png" style="width: 100%" />
-            <img class="homeLoungeSlides" src="~/Content/images/imgLounge5.png" style="width: 100%" />
-        </div>
-    </div>
+        <h1><span>Our Lounge</span></h1>
+            <div class="w3-content w3-section" style="max-width: 800px">
+                <img class="homeLoungeSlides" src="~/Content/images/imgLounge1.png" style="width: 100%" />
+                <img class="homeLoungeSlides" src="~/Content/images/imgLounge2.png" style="width: 100%" />
+                <img class="homeLoungeSlides" src="~/Content/images/imgLounge3.png" style="width: 100%" />
+                <img class="homeLoungeSlides" src="~/Content/images/imgLounge4.png" style="width: 100%" />
+                <img class="homeLoungeSlides" src="~/Content/images/imgLounge5.png" style="width: 100%" />
+                <img class="homeLoungeSlides" src="~/Content/images/imgLounge6.png" style="width: 100%" />
+                <img class="homeLoungeSlides" src="~/Content/images/imgLounge7.png" style="width: 100%" />
+            </div>
+</div>
     <div class="col-lg-5">
         <br/><br />
         <div class="row">
